examples/typechecking/alias_affine.an
type Resource = id: I32
type Pair = a: Resource, b: Resource
consume _ = ()

scrutinee_moved_by_match () =
    r = Resource 1
    match r
    | whole @ Resource _ -> consume whole
    consume r

alias_used_twice () =
    r = Resource 2
    match r
    | whole @ Resource _ ->
        consume whole
        consume whole

bare_alias_double_move () =
    r = Resource 3
    match r
    | a @ b ->
        consume a
        consume b

whole_then_inner () =
    p = Pair (Resource 4) (Resource 5)
    match p
    | whole @ Pair first _ ->
        consume whole
        consume first

inner_then_whole () =
    p = Pair (Resource 6) (Resource 7)
    match p
    | whole @ Pair first _ ->
        consume first
        consume whole

// ok
disjoint_siblings () =
    p = Pair (Resource 8) (Resource 9)
    match p
    | _whole @ Pair first second ->
        consume first
        consume second

capture_inner_then_whole () =
    p = Pair (Resource 10) (Resource 11)
    match p
    | whole @ Pair first _ ->
        _f = move fn () -> consume first
        consume whole

main () = ()

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/alias_affine.an:9:13
//  6 |     r = Resource 1
//  7 |     match r	// note: r was previously moved here
//    |           -
//  8 |     | whole @ Resource _ -> consume whole
//  9 |     consume r	// error: Use of moved value r
//    |             ^
// 
// examples/typechecking/alias_affine.an:16:17
// 14 |     | whole @ Resource _ ->
// 15 |         consume whole	// note: whole was previously moved here
//    |                 -----
// 16 |         consume whole	// error: Use of moved value whole
//    |                 ^^^^^
// 
// examples/typechecking/alias_affine.an:23:17
// 21 |     | a @ b ->
// 22 |         consume a	// note: a was previously moved here
//    |                 -
// 23 |         consume b	// error: Use of moved value a
//    |                 ^
// 
// examples/typechecking/alias_affine.an:30:17
// 28 |     | whole @ Pair first _ ->
// 29 |         consume whole	// note: whole.a was previously moved here
//    |                 -----
// 30 |         consume first	// error: Use of moved value whole.a
//    |                 ^^^^^
// 
// examples/typechecking/alias_affine.an:37:17
// 35 |     | whole @ Pair first _ ->
// 36 |         consume first	// note: whole was previously moved here
//    |                 -----
// 37 |         consume whole	// error: Use of moved value whole
//    |                 ^^^^^
// 
// examples/typechecking/alias_affine.an:52:17
// 50 |     | whole @ Pair first _ ->
// 51 |         _f = move fn () -> consume first	// note: whole was previously moved here
//    |              ---------------------------
// 52 |         consume whole	// error: Use of moved value whole
//    |                 ^^^^^
// 
// Found 6 errors and 0 warnings

